rror validating data: ValidationError(Deployment.spec.template.spec.containers): invalid type for io.k8s.api.core.v1.PodSpec.containers: got map, expected array

--- a/ruby.yaml
+++ b/ruby.yaml
@@ -22,6 +22,7 @@ spec:
         app: ruby
     spec:
       containers:
+      - name: ruby
         image: ruby:2x
         imagePullPolicy: Never
         ports:
