--- a/node.yaml
+++ b/node.yaml
@@ -23,11 +23,13 @@ spec:
     spec:
       containers:
       - name: node
-        image: hebertsonm/node:_version_
+        image: meuscontainers.azurecr.io/hebertsonm/node:_version_
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
         resources: {}
+      imagePullSecrets:
+      - name: acr
       restartPolicy: Always
 ---
 kind: Service
