--- a/storage.yaml
+++ b/storage.yaml
@@ -1,13 +1,21 @@
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: managed-premium
+provisioner: kubernetes.io/azure-disk
+reclaimPolicy: Retain
+parameters:
+  storageaccounttype: Standard_LRS
+  kind: Managed
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
-  labels:
-  name: kube-storage
+  name: azure-managed-disk
 spec:
   accessModes:
-  - ReadWriteMany
+  - ReadWriteOnce
+  storageClassName: managed-premium
   resources:
     requests:
-      storage: 100Mi
-status: {}
+      storage: 5Gi
